; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/serial_link/protocol/extr_frame_router.c_route_incoming_frame.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/serial_link/protocol/extr_frame_router.c_route_incoming_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@is_master = common dso_local global i64 0, align 8
@DOWN_LINK = common dso_local global i64 0, align 8
@UP_LINK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @route_incoming_frame(i64 %0, i64* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* @is_master, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %25

9:                                                ; preds = %3
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* @DOWN_LINK, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %24

13:                                               ; preds = %9
  %14 = load i64*, i64** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = sub nsw i32 %15, 1
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i64, i64* %14, i64 %17
  %19 = load i64, i64* %18, align 8
  %20 = load i64*, i64** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = sub nsw i32 %21, 1
  %23 = call i32 @transport_recv_frame(i64 %19, i64* %20, i32 %22)
  br label %24

24:                                               ; preds = %13, %9
  br label %68

25:                                               ; preds = %3
  %26 = load i64, i64* %4, align 8
  %27 = load i64, i64* @UP_LINK, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %55

29:                                               ; preds = %25
  %30 = load i64*, i64** %5, align 8
  %31 = load i32, i32* %6, align 4
  %32 = sub nsw i32 %31, 1
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i64, i64* %30, i64 %33
  %35 = load i64, i64* %34, align 8
  %36 = and i64 %35, 1
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %43

38:                                               ; preds = %29
  %39 = load i64*, i64** %5, align 8
  %40 = load i32, i32* %6, align 4
  %41 = sub nsw i32 %40, 1
  %42 = call i32 @transport_recv_frame(i64 0, i64* %39, i32 %41)
  br label %43

43:                                               ; preds = %38, %29
  %44 = load i64*, i64** %5, align 8
  %45 = load i32, i32* %6, align 4
  %46 = sub nsw i32 %45, 1
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds i64, i64* %44, i64 %47
  %49 = load i64, i64* %48, align 8
  %50 = ashr i64 %49, 1
  store i64 %50, i64* %48, align 8
  %51 = load i64, i64* @DOWN_LINK, align 8
  %52 = load i64*, i64** %5, align 8
  %53 = load i32, i32* %6, align 4
  %54 = call i32 @validator_send_frame(i64 %51, i64* %52, i32 %53)
  br label %67

55:                                               ; preds = %25
  %56 = load i64*, i64** %5, align 8
  %57 = load i32, i32* %6, align 4
  %58 = sub nsw i32 %57, 1
  %59 = sext i32 %58 to i64
  %60 = getelementptr inbounds i64, i64* %56, i64 %59
  %61 = load i64, i64* %60, align 8
  %62 = add nsw i64 %61, 1
  store i64 %62, i64* %60, align 8
  %63 = load i64, i64* @UP_LINK, align 8
  %64 = load i64*, i64** %5, align 8
  %65 = load i32, i32* %6, align 4
  %66 = call i32 @validator_send_frame(i64 %63, i64* %64, i32 %65)
  br label %67

67:                                               ; preds = %55, %43
  br label %68

68:                                               ; preds = %67, %24
  ret void
}

declare dso_local i32 @transport_recv_frame(i64, i64*, i32) #1

declare dso_local i32 @validator_send_frame(i64, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
